force-app/main/default/objects/Question_Citation__c/Question_Citation__c.object-meta.xml
<CustomObject>
    <description>External reference backing a question.</description>
    <label>Question Citation</label>
    <nameField>
        <label>Question Citation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Citations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>