force-app/main/default/objects/Question_Citation__c/fields/Broken_Link__c.field-meta.xml
<CustomField>
    <fullName>Broken_Link__c</fullName>
    <label>Broken Link</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>