force-app/main/default/objects/Question_Citation__c/fields/Last_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Verified_Date__c</fullName>
    <label>Last Verified Date</label>
    <type>Date</type>
</CustomField>