force-app/main/default/objects/Question_Citation__c/fields/Quote_Or_Reference__c.field-meta.xml
<CustomField>
    <fullName>Quote_Or_Reference__c</fullName>
    <label>Quote Or Reference</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>