force-app/main/default/objects/Question_Citation__c/fields/Relevance_Note__c.field-meta.xml
<CustomField>
    <fullName>Relevance_Note__c</fullName>
    <label>Relevance Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>