force-app/main/default/objects/Question_Citation__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Help</fullName>
            </value>
            <value>
                <fullName>Trailhead</fullName>
            </value>
            <value>
                <fullName>Release Notes</fullName>
            </value>
            <value>
                <fullName>Internal Guide</fullName>
            </value>
            <value>
                <fullName>Vendor Docs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Developer Docs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>