force-app/main/default/objects/Question_Citation__c/fields/Trivia_Question__c.field-meta.xml
<CustomField>
    <fullName>Trivia_Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Trivia Question</label>
    <referenceTo>Trivia_Question__c</referenceTo>
    <relationshipLabel>Trivia Question</relationshipLabel>
    <relationshipName>Citations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>