force-app/main/default/objects/Question_Citation__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Verified By</relationshipLabel>
    <relationshipName>Citations_Verified</relationshipName>
    <type>Lookup</type>
</CustomField>